# cross-platform-test

./: .gitignore  CMakeLists.txt  Makefile
src/: blockchain.h  functions_unix.c  functions_unix.h  functions_win.c  main.c
